[tool.poetry]
name = "xmonitor"
version = "0.0.1"
description = "Monitoring Script using XMRig API"
authors = ["Pedro Antonio <wrenchwastaken@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
tabulate = "^0.9.0"
colorama = "^0.4.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
